--- a/css/footer.css
+++ b/css/footer.css
@@ -25,6 +25,7 @@
     color: white;
     font-family: "Jost", sans-serif;
     font-size: 0.6rem;
+    position: static;
   }
 }
 @media (min-width: 577px) and (max-width: 769px) {
@@ -53,6 +54,7 @@
     color: white;
     font-family: "Jost", sans-serif;
     font-size: 0.6rem;
+    position: static;
   }
 }
 @media (min-width: 770px) and (max-width: 834px) {
@@ -82,6 +84,7 @@
     font-family: "Jost", sans-serif;
     margin-bottom: 2rem;
     font-size: 1rem;
+    position: static;
   }
 }
 @media (min-width: 835px) and (max-width: 1024px) {
@@ -111,6 +114,7 @@
     font-family: "Jost", sans-serif;
     font-size: 1rem;
     margin-bottom: 2rem;
+    position: static;
   }
 }
 @media (min-width: 1025px) {
