--- a/css/footer.scss
+++ b/css/footer.scss
@@ -32,6 +32,7 @@
             color: white;
             font-family: 'Jost', sans-serif;
             font-size: 0.6rem;
+            position: static;
         }
     }
 }
@@ -68,6 +69,7 @@
             color: white;
             font-family: 'Jost', sans-serif;
             font-size: 0.6rem;
+            position: static;
         }
     }
 }
@@ -105,6 +107,7 @@
             font-family: 'Jost', sans-serif;
             margin-bottom: 2rem;
             font-size: 1rem;
+            position: static;
         }
     }
 }
@@ -142,6 +145,7 @@
             font-family: 'Jost', sans-serif;
             font-size: 1rem;
             margin-bottom: 2rem;
+            position: static;
         }
     }
 }
