--- a/style.css
+++ b/style.css
@@ -33,14 +33,20 @@
     margin-top: 0.5rem;
     margin-left: 0.7rem;
   }
+  nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   nav .menu-icon {
-    display: inline-block;
+    display: flex;
     cursor: pointer;
     font-size: 2.5em;
     display: flex;
     position: absolute;
     top: 0.1rem;
-    margin-left: 85%;
+    justify-content: center;
+    align-items: center;
     color: #FFFFFF;
   }
   nav input[type=checkbox] {
@@ -54,7 +60,7 @@
     flex-direction: column;
     width: 100%;
     position: absolute;
-    margin-top: 0.5rem;
+    margin-top: 20rem;
     background-color: rgba(51, 51, 51, 0.9098039216);
     z-index: 1;
   }
@@ -76,7 +82,7 @@
     width: 100%;
     padding-left: 10%;
     padding-right: 10%;
-    text-align: center;
+    text-align: left;
     position: absolute;
     color: white;
     top: 8rem;
@@ -88,7 +94,7 @@
     width: 100%;
     padding-left: 10%;
     padding-right: 10%;
-    text-align: center;
+    text-align: left;
     position: absolute;
     color: white;
     top: 8rem;
@@ -132,6 +138,7 @@
     font-size: 0.7rem;
     text-align: center;
     color: black;
+    text-align: left;
   }
 }
 @media (max-width: 576px) and (min-height: 600px) {
