--- a/style.scss
+++ b/style.scss
@@ -45,15 +45,19 @@ header {
 }
 
 nav {
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   .menu-icon {
-    display: inline-block;
+    display: flex;
     cursor: pointer;
     font-size: 2.5em;
     display: flex;
     position: absolute;
     top: 0.1rem;
-    margin-left: 85%;
+    justify-content: center;
+    align-items: center;
     color: #FFFFFF;
   }
 
@@ -69,7 +73,7 @@ nav {
     flex-direction: column;
     width: 100%;
     position: absolute;
-    margin-top: 0.5rem;
+    margin-top: 20rem;
     background-color: #333333e8;
     z-index: 1;
 
@@ -97,7 +101,7 @@ nav {
   width: 100%;
   padding-left: 10%;
   padding-right: 10%;
-  text-align: center;
+  text-align: left;
   position: absolute;
   color: white;
   top: 8rem;
@@ -110,7 +114,7 @@ nav {
   width: 100%;
   padding-left: 10%;
   padding-right: 10%;
-  text-align: center;
+  text-align: left;
   position: absolute;
   color: white;
   top: 8rem;
@@ -164,6 +168,7 @@ main {
     font-size: 0.7rem;
     text-align: center;
     color: black;
+    text-align: left;
   }
 
   @media (min-height: 600px) { 
