--- a/css/footer.css
+++ b/css/footer.css
@@ -37,7 +37,7 @@
   footer {
     width: 100%;
     height: 7rem;
-    background-color: #262e25;
+    background-color: #25282e;
     display: flex;
     align-items: center;
     justify-content: center;
