--- a/css/mainOmoss.css
+++ b/css/mainOmoss.css
@@ -39,12 +39,15 @@
   }
   main p {
     font-size: 1rem;
+    font-weight: 900;
     width: 100%;
     display: flex;
-    text-align: center;
+    text-align: left;
     margin: auto;
     position: static;
     color: black;
+    line-height: normal;
+    margin-bottom: 1rem;
   }
   main .values-and-missions .value-box {
     width: 100%;
@@ -56,13 +59,21 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
   }
   main .values-and-missions .value-item {
-    font-weight: bold;
+    font-weight: bolder;
+    font-size: 2rem;
     display: block;
     margin-bottom: 1rem;
   }
   main .mission-statements p {
     margin: 10px 0;
+    font-size: 1rem;
     color: #555;
+  }
+  .spacer {
+    width: 100%;
+    height: 5rem;
+    position: relative;
+    display: flex;
   }
 }
 @media (min-width: 577px) and (max-width: 769px) {
@@ -106,16 +117,19 @@
   }
   main p {
     font-size: 1.5rem;
+    font-weight: 900;
     width: 100%;
     display: flex;
-    text-align: center;
+    text-align: left;
     margin: auto;
     position: static;
     color: black;
+    line-height: normal;
+    margin-bottom: 1rem;
   }
   main .values-and-missions .value-box {
     width: 100%;
-    font-size: 1rem;
+    font-size: 2rem;
     padding: 20px;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
@@ -129,7 +143,14 @@
   }
   main .mission-statements p {
     margin: 10px 0;
+    font-size: 1rem;
     color: #555;
+  }
+  .spacer {
+    width: 100%;
+    height: 5rem;
+    position: relative;
+    display: flex;
   }
 }
 @media (min-width: 770px) and (max-width: 834px) {
@@ -172,17 +193,20 @@
     height: auto;
   }
   main p {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
+    font-weight: 900;
     width: 100%;
     display: flex;
-    text-align: center;
+    text-align: left;
     margin: auto;
     position: static;
     color: black;
+    line-height: normal;
+    margin-bottom: 1rem;
   }
   main .values-and-missions .value-box {
     width: 100%;
-    font-size: 1rem;
+    font-size: 2rem;
     padding: 20px;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
@@ -196,7 +220,14 @@
   }
   main .mission-statements p {
     margin: 10px 0;
+    font-size: 1rem;
     color: #555;
+  }
+  .spacer {
+    width: 100%;
+    height: 5rem;
+    position: relative;
+    display: flex;
   }
 }
 @media (min-width: 835px) and (max-width: 1024px) {
@@ -239,17 +270,20 @@
     height: auto;
   }
   main p {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    font-weight: 900;
     width: 100%;
     display: flex;
-    text-align: center;
+    text-align: left;
     margin: auto;
     position: static;
     color: black;
+    line-height: normal;
+    margin-bottom: 1rem;
   }
   main .values-and-missions .value-box {
     width: 100%;
-    font-size: 1rem;
+    font-size: 2rem;
     padding: 20px;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
@@ -263,7 +297,14 @@
   }
   main .mission-statements p {
     margin: 10px 0;
+    font-size: 1rem;
     color: #555;
+  }
+  .spacer {
+    width: 100%;
+    height: 5rem;
+    position: relative;
+    display: flex;
   }
 }
 @media (min-width: 1025px) {
@@ -306,17 +347,20 @@
     height: auto;
   }
   main p {
-    font-size: 2.2rem;
+    font-size: 1.5rem;
+    font-weight: 900;
     width: 100%;
     display: flex;
-    text-align: center;
+    text-align: left;
     margin: auto;
     position: static;
     color: black;
+    line-height: normal;
+    margin-bottom: 1rem;
   }
   main .values-and-missions .value-box {
     width: 100%;
-    font-size: 1rem;
+    font-size: 2rem;
     padding: 20px;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
@@ -330,6 +374,13 @@
   }
   main .mission-statements p {
     margin: 10px 0;
+    font-size: 1rem;
     color: #555;
+  }
+  .spacer {
+    width: 100%;
+    height: 5rem;
+    position: relative;
+    display: flex;
   }
 }/*# sourceMappingURL=mainOmoss.css.map */
