--- a/css/mainOmoss.scss
+++ b/css/mainOmoss.scss
@@ -44,12 +44,15 @@
 
         p {
             font-size: 1rem;
+            font-weight: 900;
             width: 100%;
             display: flex;
-            text-align: center;
+            text-align: left;
             margin: auto;
             position: static;
             color: black;
+            line-height: normal;
+            margin-bottom: 1rem;
         }
     
         .values-and-missions {
@@ -64,7 +67,8 @@
             }
             
             .value-item {
-                font-weight: bold;
+                font-weight: bolder;
+                font-size: 2rem;
                 display: block;
                 margin-bottom: 1rem;
             }
@@ -72,8 +76,16 @@
     
         .mission-statements p {
             margin: 10px 0;
+            font-size: 1rem;
             color: #555;
         }
+    }
+
+    .spacer {
+        width: 100%;
+        height: 5rem;
+        position: relative;
+        display: flex;
     }
 }
 
@@ -123,18 +135,21 @@
 
         p {
             font-size: 1.5rem;
+            font-weight: 900;
             width: 100%;
             display: flex;
-            text-align: center;
+            text-align: left;
             margin: auto;
             position: static;
             color: black;
+            line-height: normal;
+            margin-bottom: 1rem;
         }
     
         .values-and-missions {
             .value-box {
                 width: 100%;
-                font-size: 1rem;
+                font-size: 2rem;
                 padding: 20px;
                 background: rgba(255, 255, 255, 0.2);
                 backdrop-filter: blur(5px);
@@ -151,8 +166,16 @@
     
         .mission-statements p {
             margin: 10px 0;
+            font-size: 1rem;
             color: #555;
         }
+    }
+
+    .spacer {
+        width: 100%;
+        height: 5rem;
+        position: relative;
+        display: flex;
     }
 }
 
@@ -201,19 +224,22 @@
         }
 
         p {
-            font-size: 1.7rem;
+            font-size: 1.5rem;
+            font-weight: 900;
             width: 100%;
             display: flex;
-            text-align: center;
+            text-align: left;
             margin: auto;
             position: static;
             color: black;
+            line-height: normal;
+            margin-bottom: 1rem;
         }
     
         .values-and-missions {
             .value-box {
                 width: 100%;
-                font-size: 1rem;
+                font-size: 2rem;
                 padding: 20px;
                 background: rgba(255, 255, 255, 0.2);
                 backdrop-filter: blur(5px);
@@ -230,8 +256,16 @@
     
         .mission-statements p {
             margin: 10px 0;
+            font-size: 1rem;
             color: #555;
         }
+    }
+
+    .spacer {
+        width: 100%;
+        height: 5rem;
+        position: relative;
+        display: flex;
     }
 }
 
@@ -280,19 +314,22 @@
         }
 
         p {
-            font-size: 2rem;
+            font-size: 1.5rem;
+            font-weight: 900;
             width: 100%;
             display: flex;
-            text-align: center;
+            text-align: left;
             margin: auto;
             position: static;
             color: black;
+            line-height: normal;
+            margin-bottom: 1rem;
         }
     
         .values-and-missions {
             .value-box {
                 width: 100%;
-                font-size: 1rem;
+                font-size: 2rem;
                 padding: 20px;
                 background: rgba(255, 255, 255, 0.2);
                 backdrop-filter: blur(5px);
@@ -309,8 +346,16 @@
     
         .mission-statements p {
             margin: 10px 0;
+            font-size: 1rem;
             color: #555;
         }
+    }
+
+    .spacer {
+        width: 100%;
+        height: 5rem;
+        position: relative;
+        display: flex;
     }
 }
 
@@ -359,19 +404,22 @@
         }
 
         p {
-            font-size: 2.2rem;
+            font-size: 1.5rem;
+            font-weight: 900;
             width: 100%;
             display: flex;
-            text-align: center;
+            text-align: left;
             margin: auto;
             position: static;
             color: black;
+            line-height: normal;
+            margin-bottom: 1rem;
         }
     
         .values-and-missions {
             .value-box {
                 width: 100%;
-                font-size: 1rem;
+                font-size: 2rem;
                 padding: 20px;
                 background: rgba(255, 255, 255, 0.2);
                 backdrop-filter: blur(5px);
@@ -388,7 +436,15 @@
     
         .mission-statements p {
             margin: 10px 0;
+            font-size: 1rem;
             color: #555;
         }
+    }
+
+    .spacer {
+        width: 100%;
+        height: 5rem;
+        position: relative;
+        display: flex;
     }
 }
