--- a/css/mainEvent.css
+++ b/css/mainEvent.css
@@ -26,15 +26,15 @@
     position: relative;
   }
   h4 {
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     margin-bottom: 4rem;
   }
   .textp {
     display: flex;
     color: black;
     position: absolute;
-    font-size: 0.8rem;
-    font-weight: 400;
+    font-size: 0.6rem;
+    font-weight: 700;
     max-width: 90%;
     margin-top: 1rem;
     text-align: left;
@@ -138,6 +138,12 @@
     overflow: hidden;
     z-index: 2;
   }
+  .spacer {
+    width: 100%;
+    height: 10rem;
+    position: relative;
+    display: flex;
+  }
 }
 @media (min-width: 835px) and (max-width: 1024px) {
   .container {
@@ -182,6 +188,12 @@
     top: 1rem;
     overflow: hidden;
     z-index: 2;
+  }
+  .spacer {
+    width: 100%;
+    height: 10rem;
+    position: relative;
+    display: flex;
   }
 }
 @media (min-width: 1025px) {
