--- a/css/mainEvent.scss
+++ b/css/mainEvent.scss
@@ -29,7 +29,7 @@
     }
 
     h4 {
-        font-size: 1.5rem;
+        font-size: 1.1rem;
         margin-bottom: 4rem;
     }
 
@@ -37,8 +37,8 @@
         display: flex;
         color: black;
         position: absolute;
-        font-size: 0.8rem;
-        font-weight: 400;
+        font-size: 0.6rem;
+        font-weight: 700;
         max-width:90%;
         margin-top: 1rem;
         text-align: left;
@@ -153,6 +153,13 @@
         overflow: hidden;
         z-index: 2;
     }
+
+    .spacer {
+        width: 100%;
+        height: 10rem;
+        position: relative;
+        display: flex;
+    }
 }
 
 @media (min-width: 835px) and (max-width: 1024px) {
@@ -203,6 +210,13 @@
         top: 1rem;
         overflow: hidden;
         z-index: 2;
+    }
+
+    .spacer {
+        width: 100%;
+        height: 10rem;
+        position: relative;
+        display: flex;
     }
 }
 
