--- a/css/computer.scss
+++ b/css/computer.scss
@@ -234,46 +234,46 @@
         
     }
     
-    footer {
-        flex-shrink: 0;
-        width: 100%;
-        height: 14rem;
-        background-color: #25282e;
-        position: relative;
-        display: flex;
-        // bottom: 0%;
-        // left: 0%;
-        margin-top: auto;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        z-index: 2;
+    // footer {
+    //     flex-shrink: 0;
+    //     width: 100%;
+    //     height: 14rem;
+    //     background-color: #25282e;
+    //     position: relative;
+    //     display: flex;
+    //     // bottom: 0%;
+    //     // left: 0%;
+    //     margin-top: auto;
+    //     align-items: center;
+    //     justify-content: center;
+    //     flex-direction: column;
+    //     z-index: 2;
     
-        img {
-            width: 5rem;
-            height: 7rem;
-            margin-bottom: 0.1rem;
-        }
+    //     img {
+    //         width: 5rem;
+    //         height: 7rem;
+    //         margin-bottom: 0.1rem;
+    //     }
     
-        p {
-            color: white;
-            font-family: 'Jost', sans-serif;
-            font-size: 0.6rem;
-        }
+    //     p {
+    //         color: white;
+    //         font-family: 'Jost', sans-serif;
+    //         font-size: 0.6rem;
+    //     }
 
-        a {
-            position: absolute;
-            top: 60%;       /* position it at the top */
-            left: 1%;      /* position it to the left */
-            font-size: 2.5rem;
-            color: white;
-            text-decoration: none;
-        }
+    //     a {
+    //         position: absolute;
+    //         top: 60%;       /* position it at the top */
+    //         left: 1%;      /* position it to the left */
+    //         font-size: 2.5rem;
+    //         color: white;
+    //         text-decoration: none;
+    //     }
 
-        a:hover {
-            color: #E4405F;
-        }
-    }
+    //     a:hover {
+    //         color: #E4405F;
+    //     }
+    // }
 
     .spacer {
         height: 8.5rem;
