--- a/css/desktop.css
+++ b/css/desktop.css
@@ -177,16 +177,23 @@
     font-family: "Jost", sans-serif;
     font-size: 0.6rem;
   }
-  footer a {
-    display: inline-block;
+  footer .social-icons {
+    position: absolute;
+    top: 185%;
+    left: 1%;
+    display: flex;
+    justify-content: space-between;
+  }
+  footer .social-icons a {
     font-size: 2.5rem;
     color: white;
     text-decoration: none;
-    position: absolute;
-    left: 0.5rem;
-    bottom: 0.5rem;
+    margin-right: 10px;
   }
-  footer a:hover {
+  footer .social-icons a:last-child {
+    margin-right: 0;
+  }
+  footer .social-icons a:hover {
     color: #E4405F;
   }
   @font-face {
