--- a/css/desktop.scss
+++ b/css/desktop.scss
@@ -252,19 +252,28 @@
             font-size: 0.6rem;
         }
 
-        a {
-            display: inline-block;
+        .social-icons {
+            position: absolute;
+            top: 185%;
+            left: 1%;
+            display: flex;
+            justify-content: space-between;
+        
+          a {
             font-size: 2.5rem;
             color: white;
             text-decoration: none;
-            position: absolute;
-            left: 0.5rem;
-            bottom: 0.5rem;
-        }
-
-        a:hover {
+            margin-right: 10px;
+          }
+        
+          a:last-child {
+            margin-right: 0;
+          }
+        
+          a:hover {
             color: #E4405F;
-        }
+          }
+        } 
     }
     
     @font-face {
