--- a/css/footer.css
+++ b/css/footer.css
@@ -17,15 +17,41 @@
     margin-top: auto;
   }
   footer img {
-    width: 3rem;
-    height: 5rem;
+    width: 2.5rem;
+    height: 4rem;
     margin-bottom: 0.1rem;
   }
   footer p {
     color: white;
     font-family: "Jost", sans-serif;
-    font-size: 0.6rem;
+    font-size: 0.5rem;
     position: static;
+    margin-bottom: -3.5rem;
+  }
+  footer a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.5rem;
+    margin-left: 1rem;
+  }
+  footer .tag1 {
+    position: static;
+    margin-right: 95%;
+    margin-bottom: -1.7rem;
+  }
+  footer .tag2 {
+    position: static;
+    margin-right: 80%;
+    margin-bottom: 2rem;
+  }
+  footer a:hover {
+    color: #E4405F;
+  }
+  .spacer {
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    position: relative;
   }
 }
 @media (min-width: 577px) and (max-width: 769px) {
@@ -53,8 +79,33 @@
   footer p {
     color: white;
     font-family: "Jost", sans-serif;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     position: static;
+    margin-bottom: -4rem;
+  }
+  footer a {
+    color: white;
+    text-decoration: none;
+    font-size: 2.5rem;
+  }
+  footer .tag1 {
+    position: static;
+    margin-right: 95%;
+    margin-bottom: -2.8rem;
+  }
+  footer .tag2 {
+    position: static;
+    margin-right: 85%;
+    margin-bottom: 2rem;
+  }
+  footer a:hover {
+    color: #E4405F;
+  }
+  .spacer {
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    position: relative;
   }
 }
 @media (min-width: 770px) and (max-width: 834px) {
@@ -82,9 +133,33 @@
   footer p {
     color: white;
     font-family: "Jost", sans-serif;
-    margin-bottom: 2rem;
-    font-size: 1rem;
+    font-size: 0.8rem;
     position: static;
+    margin-bottom: -3rem;
+  }
+  footer a {
+    color: white;
+    text-decoration: none;
+    font-size: 2.5rem;
+  }
+  footer .tag1 {
+    position: static;
+    margin-right: 95%;
+    margin-bottom: -2.8rem;
+  }
+  footer .tag2 {
+    position: static;
+    margin-right: 85%;
+    margin-bottom: 2rem;
+  }
+  footer a:hover {
+    color: #E4405F;
+  }
+  .spacer {
+    width: 100%;
+    height: 11rem;
+    display: flex;
+    position: relative;
   }
 }
 @media (min-width: 835px) and (max-width: 1024px) {
@@ -112,9 +187,33 @@
   footer p {
     color: white;
     font-family: "Jost", sans-serif;
-    font-size: 1rem;
-    margin-bottom: 2rem;
+    font-size: 0.8rem;
     position: static;
+    margin-bottom: -3rem;
+  }
+  footer a {
+    color: white;
+    text-decoration: none;
+    font-size: 2.5rem;
+  }
+  footer .tag1 {
+    position: static;
+    margin-right: 95%;
+    margin-bottom: -2.8rem;
+  }
+  footer .tag2 {
+    position: static;
+    margin-right: 85%;
+    margin-bottom: 2rem;
+  }
+  footer a:hover {
+    color: #E4405F;
+  }
+  .spacer {
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    position: relative;
   }
 }
 @media (min-width: 1025px) {
@@ -145,5 +244,30 @@
     font-family: "Jost", sans-serif;
     font-size: 0.8rem;
     position: static;
+    margin-bottom: -3rem;
+  }
+  footer a {
+    color: white;
+    text-decoration: none;
+    font-size: 2.5rem;
+  }
+  footer .tag1 {
+    position: static;
+    margin-right: 95%;
+    margin-bottom: -2.8rem;
+  }
+  footer .tag2 {
+    position: static;
+    margin-right: 88%;
+    margin-bottom: 2rem;
+  }
+  footer a:hover {
+    color: #E4405F;
+  }
+  .spacer {
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    position: relative;
   }
 }/*# sourceMappingURL=footer.css.map */
