--- a/css/footer.scss
+++ b/css/footer.scss
@@ -23,17 +23,48 @@
         margin-top: auto;
     
         img {
-            width: 3rem;
-            height: 5rem;
+            width: 2.5rem;
+            height: 4rem;
             margin-bottom: 0.1rem;
         }
     
         p {
             color: white;
             font-family: 'Jost', sans-serif;
-            font-size: 0.6rem;
+            font-size: 0.5rem;
             position: static;
+            margin-bottom: -3.5rem;
         }
+
+        a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.5rem;
+            margin-left: 1rem;
+        }
+
+        .tag1 {
+            position: static;
+            margin-right: 95%;
+            margin-bottom: -1.7rem;
+        }
+
+        .tag2 {
+            position: static;
+            margin-right: 80%;
+            margin-bottom: 2rem;
+        }
+
+        a:hover {
+            color: #E4405F;
+        }
+    }
+    
+    .spacer {
+        width: 100%;
+        height: 2rem;
+        display: flex;
+        position: relative;
     }
 }
 
@@ -68,9 +99,39 @@
         p {
             color: white;
             font-family: 'Jost', sans-serif;
-            font-size: 0.6rem;
+            font-size: 0.8rem;
             position: static;
+            margin-bottom: -4rem;
         }
+
+        a {
+            color: white;
+            text-decoration: none;
+            font-size: 2.5rem;
+        }
+
+        .tag1 {
+            position: static;
+            margin-right: 95%;
+            margin-bottom: -2.8rem;
+        }
+
+        .tag2 {
+            position: static;
+            margin-right: 85%;
+            margin-bottom: 2rem;
+        }
+
+        a:hover {
+            color: #E4405F;
+        }
+    }
+    
+    .spacer {
+        width: 100%;
+        height: 5rem;
+        display: flex;
+        position: relative;
     }
 }
 
@@ -105,10 +166,39 @@
         p {
             color: white;
             font-family: 'Jost', sans-serif;
-            margin-bottom: 2rem;
-            font-size: 1rem;
+            font-size: 0.8rem;
             position: static;
+            margin-bottom: -3rem;
         }
+
+        a {
+            color: white;
+            text-decoration: none;
+            font-size: 2.5rem;
+        }
+
+        .tag1 {
+            position: static;
+            margin-right: 95%;
+            margin-bottom: -2.8rem;
+        }
+
+        .tag2 {
+            position: static;
+            margin-right: 85%;
+            margin-bottom: 2rem;
+        }
+
+        a:hover {
+            color: #E4405F;
+        }
+    }
+    
+    .spacer {
+        width: 100%;
+        height: 11rem;
+        display: flex;
+        position: relative;
     }
 }
 
@@ -143,10 +233,39 @@
         p {
             color: white;
             font-family: 'Jost', sans-serif;
-            font-size: 1rem;
-            margin-bottom: 2rem;
+            font-size: 0.8rem;
             position: static;
+            margin-bottom: -3rem;
         }
+
+        a {
+            color: white;
+            text-decoration: none;
+            font-size: 2.5rem;
+        }
+
+        .tag1 {
+            position: static;
+            margin-right: 95%;
+            margin-bottom: -2.8rem;
+        }
+
+        .tag2 {
+            position: static;
+            margin-right: 85%;
+            margin-bottom: 2rem;
+        }
+
+        a:hover {
+            color: #E4405F;
+        }
+    }
+    
+    .spacer {
+        width: 100%;
+        height: 5rem;
+        display: flex;
+        position: relative;
     }
 }
 
@@ -184,7 +303,37 @@
             font-family: 'Jost', sans-serif;
             font-size: 0.8rem;
             position: static;
+            margin-bottom: -3rem;
         }
+
+        a {
+            color: white;
+            text-decoration: none;
+            font-size: 2.5rem;
+        }
+
+        .tag1 {
+            position: static;
+            margin-right: 95%;
+            margin-bottom: -2.8rem;
+        }
+
+        .tag2 {
+            position: static;
+            margin-right: 88%;
+            margin-bottom: 2rem;
+        }
+
+        a:hover {
+            color: #E4405F;
+        }
+    }
+
+    .spacer {
+        width: 100%;
+        height: 5rem;
+        display: flex;
+        position: relative;
     }
 }
 
