--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url(./css/computer.css);
 @import url(./css/desktop.css);
 @import url(./css/mobilemed.css);
 @import url(./css/tablet.css);
@@ -231,15 +230,23 @@
     font-family: "Jost", sans-serif;
     font-size: 0.6rem;
   }
-  footer a {
+  footer .social-icons {
     position: absolute;
-    top: 40%; /* position it at the top */
-    left: 1%; /* position it to the left */
+    top: 40%;
+    left: 1%;
+    display: flex;
+    justify-content: space-between;
+  }
+  footer .social-icons a {
     font-size: 2.5rem;
     color: white;
     text-decoration: none;
+    margin-right: 10px;
   }
-  footer a:hover {
+  footer .social-icons a:last-child {
+    margin-right: 0;
+  }
+  footer .social-icons a:hover {
     color: #E4405F;
   }
   @font-face {
