--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import url(./css/computer.css);
+// @import url(./css/computer.css);
 @import url(./css/desktop.css);
 // @import url(./css/Evenemang.css);
 // @import url(./css/gallerie.css);
@@ -276,19 +276,30 @@ footer {
     font-size: 0.6rem;
   }
 
-  a {
+  .social-icons {
     position: absolute;
-    top: 40%;       /* position it at the top */
-    left: 1%;      /* position it to the left */
+    top: 40%;
+    left: 1%;
+    display: flex;
+    justify-content: space-between;
+
+  a {
     font-size: 2.5rem;
     color: white;
     text-decoration: none;
+    margin-right: 10px;
+  }
+
+  a:last-child {
+    margin-right: 0;
   }
 
   a:hover {
     color: #E4405F;
   }
+} 
 }
+
 
 @font-face {
   font-family: Jost;
